# dvrk_structure_light

./: CMakeLists.txt  README.md  data_collection.bash  licence.txt  package.xml
data/structured_light_data_3_20_2023/: ecm_positions.txt
doc/: command_list.txt  extrinsic_history.txt
param/: ammars_calibration_results.txt  dvrk_stereo_calibration.txt  endo_left.txt  endo_right.txt  extrinsics_results.txt  left_cam_intrinsics.txt  right_cam_intrinsics.txt  single_cam_2_poses_data.yaml  single_cam_3_poses_data.yaml  stereo_structured_light_data.yaml  stereo_structured_light_data_170x170.yaml  structured_light_data.yaml  tilted_left_cam_intrinsics.txt
src/: generate_pattern_test.py  gray_code_pattern.cpp  gray_code_pattern_capture.cpp  gray_code_pattern_decode.cpp  gray_code_pattern_out.cpp  image_display_test.py  image_subscriber.cpp  image_subscriber_test.cpp  lau_calibration_less.cpp  nncam.h  pattern_display.cpp  pattern_display_test.cpp  pattern_display_test.py  save_images.py  single_camera_decode.cpp  single_camera_decode_2_poses.cpp  single_camera_position_1.cpp  single_camera_position_2.cpp  single_camera_position_3.cpp  stereo_gray_code_pattern_capture.cpp  stereo_gray_code_pattern_decode.cpp  structured_light_combined.cpp  test_nncam.cpp
