<?xml version="1.0"?>
<package>
	<name>dvrk_structure_light</name>
	<version>0.0.0</version>
	<description>package for structure light projecting in da vinci</description>
	<maintainer email="axn337@case.edu">Ammar Nahari</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>image_transport</build_depend>	<build_depend>opencv2</build_depend>
	<build_depend>cv_bridge</build_depend>	
	<build_depend>sensor_msgs</build_depend>	
	<run_depend>image_transport</run_depend>
	<run_depend>opencv2</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>sensor_msgs</run_depend>

</package>
